--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <h3     class = "text-white  pt-5 ">A Style For Every Story. . </h3>
                         <h1     class = "text-white fw-bolder  ">Choose Well <br>Be Well</h1>
                         <h3     class = "text-white  "> Trandy / Cushy / Easeful</h3>
-                        <a href = "Men.html" class = "text-decoration-none btn btn-dark mt-2">Shop Now</a>
+                        <a href = "men.html" class = "text-decoration-none btn btn-dark mt-2">Shop Now</a>
                         </div>
                         
                     </div>
