--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
  <div     class = "card-body bg-danger-subtle"  >
  <img     src   = "Assets/shirts_men1.png" class = "card-img-top " alt = "" id = "radius">
  <h4      class = "text-dark ">Shirts</h4>
- <button  class = "border-0 "><a href            = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+ <button  class = "border-0 "><a href            = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -303,7 +303,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/Formal shirts.png" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Formal Shirts</h4>
-        <button class = "border-0 "><a href              = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href              = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -312,7 +312,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/printed t-shirts.png" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Printed T-shirts</h4>
-        <button class = "border-0 "><a href                 = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href                 = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -321,7 +321,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/Hoodies and sweaters.png" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Hoodies sweaters</h4>
-        <button class = "border-0 "><a href                     = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href                     = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -330,7 +330,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/joggers.jpeg" class = " card-img-top img-fluid" alt = "" id = "radius">
         <h4     class = "text-dark ">Joggers</h4>
-        <button class = "border-0 "><a href            = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href            = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -339,7 +339,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/jeans.png" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Jeans</h4>
-        <button class = "border-0 "><a href      = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href      = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -348,7 +348,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/track pants.png" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Track Pants</h4>
-        <button class = "border-0 "><a href            = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href            = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
@@ -357,7 +357,7 @@
         <div    class = "card-body bg-danger-subtle"  >
         <img    src   = "Assets/shorts.jpeg" class = "card-img-top " alt = "" id = "radius">
         <h4     class = "text-dark ">Shorts</h4>
-        <button class = "border-0 "><a href        = "Men.html" class    = "text-decoration-none ">Explore Now!</a></button>
+        <button class = "border-0 "><a href        = "men.html" class    = "text-decoration-none ">Explore Now!</a></button>
                 </div>
             </div>
         </div>
