--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <h1>Urban Shirts</h1>
                 <h5>Upto 50% OFF</h5>
                 <br>
-                <button class = "border-0 bg-transparent text-white text-end py-3  "><a href = "Men.html" class = "text-decoration-none text-white ">Explore Items</a></button>
+                <button class = "border-0 bg-transparent text-white text-end py-3  "><a href = "men.html" class = "text-decoration-none text-white ">Explore Items</a></button>
             </div>
         </div>
         <div class = "col-md-12 col-lg-6 pb-3">
