--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h2>Hawaiian <br> Shirts</h2>
                     <p class="fw-medium">Dress Up in Summer Vibe</p>
                     <h4>UPTO 50% OFF</h4>
-                    <button class = "bg border-light fw-medium"><a href = "Men.html" class = "text-decoration-none text-dark  ">Shop Now</a></button>
+                    <button class = "bg border-light fw-medium"><a href = "men.html" class = "text-decoration-none text-dark  ">Shop Now</a></button>
                 </div>
             </div>
         </div>
